# app/middlewares/globalHandler.py
@@ -1,9 +1,10 @@
 from flask_restx import Api
 from flask_jwt_extended import JWTManager
-from flask_jwt_extended.exceptions import NoAuthorizationError
 from flask import jsonify
 import traceback
 import sys
+from werkzeug.exceptions import TooManyRequests  # Import for 429
+
 api = Api()
 jwt = JWTManager()
 
@@ -16,7 +17,11 @@ class GlobalHandler:
         if not msg or msg.startswith('<'):
             msg = "Internal Server Error"
         return {'message': msg}, getattr(error, 'code', 500)
-   
+
+    @api.errorhandler(TooManyRequests)
+    def handle_too_many_requests(error):
+        return {'message': 'Too Many Requests: Limit is 10 per minute'}, 429
+
     @jwt.unauthorized_loader
     def custom_unauthorized_response(err_msg):
         return jsonify({'message': err_msg}), 401
@@ -32,5 +37,3 @@ class GlobalHandler:
     @jwt.revoked_token_loader
     def custom_revoked_token_response(jwt_header, jwt_payload):
         return jsonify({'message': 'Token has been revoked'}), 401
-    
-    
